...
            "state" : "translated",
            "value" : "Kalem ve tüm kayıtları silinsin mi?"
          }
        }
      }
    },
    "Kalemi düzenle" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Edit Item"
          }
...
            "state" : "translated",
            "value" : "Katıldı"
          }
        }
      }
    },
    "Kaydet" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save"
          }
...
            "state" : "translated",
            "value" : "Tutar belli bir aydan sonra değişiyorsa ekleyin. Ör. yılbaşına kadar 100.000, sonra 6 ay 125.000."
          }
        }
      }
    },
    "Tutar değişikliği ekle" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add Amount Change"
          }
...
            "state" : "translated",
            "value" : "Yeni kalem oluştur"
          }
        }
      }
    },
    "Yeni kayıt" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "New Entry"
          }
...
            "state" : "translated",
            "value" : "Yeni kayıt, %@"
          }
        }
      }
    },
    "Yeni tutar" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "New amount"
          }
...
            "state" : "translated",
            "value" : "Kayıtlı kalem"
          }
        }
      }
    },
    "Tek seferlik" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "One-time"
          }
...
            "state" : "translated",
            "value" : "Ne için?"
          }
        }
      }
    },
    "Ör. Kombi tamiri" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "E.g. Boiler repair"
          }
...
